# python_project_pattern

./: .gitignore  README.md  requirements.txt
source/: main.py  pyproject.toml
source/pipeline/: load.py
src/: build.py
src/pipeline/: extract.py  transform.py
src/utils/: .env.example  connection.py  env.py  logger.py
